# kESI

./: .gitignore  .travis.yml  AUTHOR  COPYRIGHT  INSTALL.md  _test_matmul_associativity.py  colorblind_friendly.py  common.py  enviroment_3.10.yml  proof_of_concept.py  proof_of_concept_kesi_fem.py  pyproject.toml  readme.md  run_tests.sh  setup.py  setup_conda_envs.sh
_meshes/: sphere_1_res0_5_physical_region.xml
extras/: SNAKEMAKE_README.md  Snakefile  _calculate_potential_basis_function.py  _common_new.py  _dicom.py  _fast_reciprocal_reconstructor.py  _integrated_sources.py  _kESI_tutorial_slice.ipynb  _kesi_dipolar.py  _test_fast_reciprocal_reconstructor.py  _test_kesi_kernel_constructor.py  _test_matmul_associativity.py  benchmark_four_spheres.py  calculate_errors.py  calculate_kcsd_potential_basis_function.py  calculate_kernel.py  calculate_kesi_potential_basis_function.py  calculate_volumetric_crosskernel.py  calculate_volumetric_eigensources.py  cbf.py  check_and_fix_corrections.py  clinical_analysis_patient2.ipynb  common.py  convert_fenics_leadfield_correction_to_nifti.py  create_grid.py  create_model_src.py  crop_grid_to_sources.py  cv_potentials.py  draw_cross_section.py  draw_cross_section_electrode.py  draw_cross_section_nifty.py  eigenreconstructor_proof_of_concept.py  electrode.py  electrodes.py  fem_infinite_slice_validation.py  forward_model.py  forward_slice_on_plate.py  forward_sphere_on_plate.py  git_kESI tutorial four spheres.ipynb  git_kESI tutorial single sphere.ipynb  (+74 more)
extras/FEM/: _fem_common.py  _fem_common_new.py  _fem_discarded.py  _fem_sphere_common.py  fem_common.py  fem_finite_slice_gaussian.py  fem_gaussian.py  fem_lanczos.py  fem_slice_gaussian.py  fem_slice_point_new.py  fem_sphere_gaussian.py  fem_sphere_point.py  fem_sphere_point_new.py
extras/FEM/_meshes_new/: Snakefile  finite_slice.geo  finite_slice.geo.template  finite_slice.ini  four_spheres.ini  four_spheres_composite.geo  four_spheres_csf_3_mm_plain.geo.template  four_spheres_separate_cortex_composite.geo  four_spheres_separate_cortex_composite_fine.geo  one_sphere.ini  one_sphere_composite.geo  one_sphere_composite.geo.template  one_sphere_plain.geo.template  one_sphere_uniform_cortex.geo.template
extras/FEM/fem_configs/: fine_slice_fine_romberg_6_degree_2.ini  fine_slice_romberg_6_degree_1.ini  fine_slice_romberg_6_degree_2.ini  fine_slice_romberg_6_degree_3.ini  finite_slice_coarse_romberg_6_degree_1.ini  finite_slice_coarse_romberg_6_degree_2.ini  finite_slice_coarse_romberg_6_degree_3.ini  finite_slice_composite_romberg_6_degree_1.ini  finite_slice_composite_romberg_6_degree_2.ini  finite_slice_composite_romberg_6_degree_3.ini  finite_slice_fine_romberg_6_degree_1.ini  finite_slice_fine_romberg_6_degree_2.ini  finite_slice_fine_romberg_6_degree_3.ini  finite_slice_romberg_6_degree_1.ini  finite_slice_romberg_6_degree_2.ini  finite_slice_romberg_6_degree_3.ini  four_spheres_demo_degree_1.ini  one_sphere_demo_degree_1.ini  one_sphere_demo_degree_2.ini  one_sphere_demo_degree_3.ini  one_sphere_demo_fine_degree_1.ini  one_sphere_demo_fine_degree_2.ini  one_sphere_demo_fine_degree_3.ini  one_sphere_demo_finer_degree_1.ini  one_sphere_demo_finer_degree_2.ini  one_sphere_demo_finer_degree_3.ini  one_sphere_demo_finest_degree_1.ini  one_sphere_demo_finest_degree_2.ini  one_sphere_demo_finest_degree_3.ini
extras/FEM/meshes/: Makefile  Snakefile  eighth_of_sphere.geo  eighth_of_sphere.geo.template  eighth_wedge_of_four_spheres.geo  eighth_wedge_of_four_spheres.geo.template  eighth_wedge_of_four_spheres_composite.geo  eighth_wedge_of_four_spheres_composite.geo.template  eighth_wedge_of_one_sphere.geo  eighth_wedge_of_one_sphere.geo.template  eighth_wedge_of_two_spheres.geo  finite_slice.geo  (+17 more)
extras/POSSIBLY_DEPRECATED_NOTEBOOKS/: common.py  git_paper_4SM__two_paralel_linear_electrodes_images_fair.ipynb  git_paper_4SM__two_paralel_linear_electrodes_images_fair_FWD_mismatch.ipynb  git_paper_4SM__two_paralel_linear_electrodes_images_handicapped.ipynb  git_paper_finite_slice__two_paralel_linear_electrodes_images_fair.ipynb  git_paper_finite_slice__two_paralel_linear_electrodes_images_handicapped.ipynb  git_stereotactic_epi_wroclaw_kESI_1SM.ipynb  paper_1SM__finest_3_comb.ipynb  paper_1SM__finest_3_comb_ANALYSIS.ipynb  paper_imgEigensources_4SM__composite_fine_1_comb.ipynb
extras/_fast_reciprocal_reconstructor/: __init__.py  potential_basis_functions.py
extras/_tutorial_plots/: four_spheres_scheme.py  four_spheres_scheme_3_mm_csf.py  single_sphere_scheme.py  slice_scheme.py
extras/auxiliary_scripts/: mesh_inspector.py
extras/local/: __init__.py  cbf.py  forward_model.py
extras/mfem_solver/: four_spheres_in_air_with_plane.geo  four_spheres_in_air_with_plane_0.01.geo  four_spheres_with_electrode.geo  line_section_through_the_middle.py  mfem_experiments.py  mfem_experiments_sphere_sampling.py  mfem_piecewise_solver.py  pyvista_resampling.py  voxel_downsampling.py
extras/stereotactic_electrodes/: 6_macro.ini  8_macro.ini  epi_eles.ini
extras/validation/: ReliabilityMap.py  api_stabilizer.py  basic_validation_figures.py  error_calculations.ipynb  fem_eigenvalues.py  fem_sphere_eigensources.py  gaussian_fft_transform.py  loadable_reconstructor_performance.py  plotting_functions.py  plotting_results.ipynb  reconstruction_with_cv.ipynb  reconstructor_time_test.py  reliability_map_4sphere.py  testing_eigensources_width.py  validate_kesi_fem.py  validate_properties.py  validation_functions.py
lib/kesi/: __init__.py  _engine.py  _verbose.py  common.py
src/kesi/: __init__.py  _engine.py  _verbose.py  common.py  kesi.py
test/: _common.py  testEigenreconstructor.py  testEngine.py  testFunctionalKCSD.py  testKCSD.py  testLinearMixture.py  testMeasurementManagerBase.py  testVerbose.py  test_CrossKernelReconstructor.py  test_Eigenreconstructor.py  test_EigenvectorKernelSolver.py  test_Engine.py  test_FunctionalKCSD.py  test_LinearKernelSolver.py  test_LinearMixture.py  test_LoadableFunctionalFieldReconstructor.py  test_LoadableVerboseFFR.py  test_MeasurementManagerBase.py  test_Verbose.py
(+117 files in other folders)
